--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<h1>Hello,World!</h1>
-<h2>hahaha!</h2>
-<h3>1lun~</h3>
+<center><h1>Welcome To My Website Page</h1></center>
+<h2>My name is Wan-Xing Zhang. Study MIIA in FJCU.</h2>
+<h3>My hobby</h3>
