--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<body bgcolor="#ccccff">
 <center><h1>Welcome To My Website Page</h1></center>
-<h2>My name is Wan-Xing Zhang. Study MIIA in FJCU.</h2>
-<h3>My hobby</h3>
+<font color="#82FF82">My name is Wan-Xing Zhang. Study MIIA in FJCU.</font>
+
