--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@
 <center><h1>Welcome To My Website Page</h1></center>
 <font color="#82FF82">My name is Wan-Xing Zhang. Study MIIA in FJCU.</font>
 
+<img src="https://media.zenfs.com/zh-TW/mirrormedia.mg/9d85a46ba36dc8792e15a7492e9269db" alt="My test image" />
