--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <body bgcolor="#ccccff">
-<center><h1>Welcome To My Website Page</h1></center>
-<font color="#8400E6">My name is Wan-Xing Zhang. Study MIIA in FJCU.</font>
+<center><h1>Welcome To My Website Page</h1>
+<h2>
+  <br><font color="#8400E6">My name is Wan-Xing Zhang. Study MIIA in FJCU.</font></br>
+  <br>My hobby</br>
+  <br>
+  </br>
+</h2>
 
 <img src="https://media.zenfs.com/zh-TW/mirrormedia.mg/9d85a46ba36dc8792e15a7492e9269db" alt="My test image" />
+
+</center>
