--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <br><font color="#8400E6">My name is Wan-Xing Zhang. Study MIIA in FJCU.</font></br>
   <br>My hobby</br>
   <br>
+  <ul>
+  <li>Reading</li>
+  <li>Photography</li>
+  <li>Playing Call of Duty</li>
+</ul>
   </br>
 </h2>
 
