--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <body bgcolor="#ccccff">
-<center><h1>Welcome To My Website Page</h1>
-<h2>
-  <br><font color="#8400E6">My name is Wan-Xing Zhang. Study MIIA in FJCU.</font></br>
-  <br>My hobby</br>
-  <br>
-  <ul>
-  <li>Reading</li>
-  <li>Photography</li>
-  <li>Playing Call of Duty</li>
-</ul>
-  </br>
-</h2>
+<center>
+  <h1>Welcome To My Website Page</h1>
+  <h2><font color="#8400E6">
+    <br>My name is Wan-Xing Zhang. Study MIIA in FJCU.</br>
+    <br>My hobby</br>
+    <br>
+      <ul>
+        <li>Reading</li>
+        <li>Photography</li>
+        <li>Playing Call of Duty</li>
+      </ul>
+    </br>
+    <br>This is my UID:6772293440806846465. You add me on Call of Duty!</br>
+  </font></h2>
 
 <img src="https://media.zenfs.com/zh-TW/mirrormedia.mg/9d85a46ba36dc8792e15a7492e9269db" alt="My test image" />
 
