--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <body bgcolor="#ccccff">
 <center>
   <h1>Welcome To My Website Page</h1>
+</ceneter>
   <h2><font color="#8400E6">
     <br>My name is Wan-Xing Zhang. Study MIIA in FJCU.</br>
     <br>My hobby</br>
@@ -14,6 +15,6 @@
     <br>This is my UID:6772293440806846465. You add me on Call of Duty!</br>
   </font></h2>
 
+<center>
 <img src="https://media.zenfs.com/zh-TW/mirrormedia.mg/9d85a46ba36dc8792e15a7492e9269db" alt="My test image" />
-
 </center>
