--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <h2>
     <br><center>My name is Wan-Xing Zhang. Study MIIA in FJCU.</center></br>
     <br>My hobby</br>
-    <br>
-      Reading
-      Photography
-      Playing Call of Duty
-    </br>
+    <ul>
+    <li>Reading</li>
+    <li>Photography</li>
+    <li>Playing Call of Duty</li>
+    </ul>
     <br>This is my UID:6772293440806846465. You add me on Call of Duty!</br>
   </h2>
 </font>
