--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
 <body bgcolor="#ccccff">
-<font color="#8400E6">
+<font color="#5E00A3">
 <center>
   <h1>Welcome To My Website Page</h1>
 </ceneter>
   <h2>
     <br><center>My name is Wan-Xing Zhang. Study MIIA in FJCU.</center></br>
     <br>My hobby</br>
-    <ul>
-    <li>Reading</li>
-    <li>Photography</li>
-    <li>Playing Call of Duty</li>
-    </ul>
-    <br>This is my UID:6772293440806846465. You add me on Call of Duty!</br>
+    <br>Reading</br>
+    <br>Photography</br>
+    <br>Playing Call of Duty</br>
+    <br>This is my UID：6772293440806846465. You add me on Call of Duty!</br>
   </h2>
 </font>
 
