--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <br>My hobby</br>
     <br>Reading</br>
     <br>Photography</br>
-    <br>Playing Call of Duty</br>
+    <br><strong>Playing Call of Duty</strong></br>
     <br>This is my UID：6772293440806846465. You add me on Call of Duty!</br>
   </h2>
 </font>
