--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <br><center>My name is Wan-Xing Zhang. Study MIIA in FJCU.</center></br>
   </h2>
   <h3>
-    <br>My hobby</br>
+    <br>My hobby：</br>
     <br>Reading</br>
     <br>Photography</br>
     <br><strong>Playing Call of Duty</strong></br>
