--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <body bgcolor="#ccccff">
 <font color="#5E00A3">
 <center>
-  <h1>Welcome To My Website Page</h1>
+  <h1><font face="impact">Welcome To My Website Page☺</font></h1>
 </ceneter>
   <h2>
     <br><center>My name is Wan-Xing Zhang. Study MIIA in FJCU.</center></br>
