--- a/index.html
+++ b/index.html
@@ -4,17 +4,20 @@
   <h1><font face="impact">Welcome To My Website Page☺</font></h1>
 </ceneter>
   <h2>
-    <br><center>My name is Wan-Xing Zhang. Study MIIA in FJCU.</center></br>
+    <br><center><font face="Trebuchet MS">My name is Wan-Xing Zhang. Study MIIA in FJCU.</font></center></br>
   </h2>
   <h3>
-    <br>My hobby：</br>
-    <br>Reading</br>
-    <br>Photography</br>
-    <br><strong>Playing Call of Duty</strong></br>
-    <br>This is my UID：6772293440806846465. You add me on Call of Duty!</br>
+    <br><font face="Trebuchet MS">My hobby：</font></br>
+    <br><font face="Trebuchet MS">Reading</font></br>
+    <br><font face="Trebuchet MS">Photography</font></br>
+    <br><font face="Trebuchet MS"><strong>Playing Call of Duty</strong></font></br>
+    <br><font face="Trebuchet MS">This is my UID：6772293440806846465. You add me on Call of Duty!</font></br>
   </h3>
 </font>
 
 <center>
 <img src="https://media.zenfs.com/zh-TW/mirrormedia.mg/9d85a46ba36dc8792e15a7492e9269db" alt="My test image" />
+</center>
+<center>
+  <h4>Take from Internet </h4>
 </center>
