--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <br><font face="Trebuchet MS">Reading</font></br>
     <br><font face="Trebuchet MS">Photography</font></br>
     <br><font face="Trebuchet MS"><strong>Playing Call of Duty</strong></font></br>
-    <br><font face="Trebuchet MS">This is my UID：6772293440806846465. You add me on Call of Duty!</font></br>
+    <br><font face="Trebuchet MS">This is my UID：6772293440806846465. You can add me on Call of Duty!</font></br>
   </h3>
 </font>
 
