--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
     <br><font face="Trebuchet MS"><strong>Playing Call of Duty</strong></font></br>
     <br><font face="Trebuchet MS">This is my UID：6772293440806846465. You can add me on Call of Duty!</font></br>
   </h3>
-</font>
+
 
 <center>
 <img src="https://media.zenfs.com/zh-TW/mirrormedia.mg/9d85a46ba36dc8792e15a7492e9269db" alt="My test image" />
 </center>
 <center>
-  <h4><a href="https://www.youtube.com/">Take it from Internet.</a></h4>
+  <h4><font face="Trebuchet MS"><a href="https://www.youtube.com/">Take it from Internet.</a></font></h4>
 </center>
+  </font>
