--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
 <img src="https://media.zenfs.com/zh-TW/mirrormedia.mg/9d85a46ba36dc8792e15a7492e9269db" alt="My test image" />
 </center>
 <center>
-  <h4><font face="Trebuchet MS"><a href="https://www.youtube.com/">Take it from Internet.</a></font></h4>
+  <h4><font face="Trebuchet MS"><a href="https://media.zenfs.com/zh-TW/mirrormedia.mg/9d85a46ba36dc8792e15a7492e9269db">Take it from Internet.</a></font></h4>
 </center>
   </font>
