--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </h2>
   <h3>
     <br><font face="Trebuchet MS">My hobby：</font></br>
-    <br><font face="Trebuchet MS">❤︎Reading</font></br>
-    <br><font face="Trebuchet MS">❤︎Photography</font></br>
-    <br><font face="Trebuchet MS"><strong>❤︎❤︎❤︎Playing Call of Duty</strong></font></br>
+    <br><font face="Trebuchet MS">Reading❤︎</font></br>
+    <br><font face="Trebuchet MS">Photography❤︎</font></br>
+    <br><font face="Trebuchet MS"><strong>Playing Call of Duty❤︎❤︎❤︎</strong></font></br>
     <br><font face="Trebuchet MS">This is my UID：6772293440806846465. You can add me on Call of Duty!</font></br>
   </h3>
 
