--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
   <h2>
     <br><center><font face="Trebuchet MS">My name is Wan-Xing Zhang. Study MIIA in FJCU.</font></center></br>
   </h2>
+   <div class="well" id="well">
+        <button class="btn btn-default target" id="target1">Join me!!!</button>
+   </div>
+  <script>
+  $(document).ready(function() {
+    $("#target1").css("color", "#5E00A3");
+    $(".well").addClass("animated shake");
+    $("#target1").prop("disabled", true);
+
+  });
+</script>
   <h3>
     <br><font face="Trebuchet MS">My hobby：</font></br>
     <br><font face="Trebuchet MS">Reading❤︎</font></br>
