--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
    </div>
   <script>
   $(document).ready(function() {
-    $("#target1").css("color", "#5E00A3");
+    
+    $("#target1").html('<span style="color: #5E00A3;">Join me!!!</span>')
     $(".well").addClass("animated shake");
     $("#target1").prop("disabled", true);
 
