--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   $(document).ready(function() {
     
     $("#target1").html('<span style="color: #5E00A3;">Join me!!!</span>')
-    $(".well").addClass("animated shake");
+    $("#target1").addClass("animated shake");
     $("#target1").prop("disabled", true);
 
   });
