--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
     <br><font face="Trebuchet MS"><strong>Playing Call of Duty❤︎❤︎❤︎</strong></font></br>
     <br><font face="Trebuchet MS">This is my UID：6772293440806846465. You can add me on Call of Duty!</font></br>
   </h3>
-<div class="well" id="well">
-        <button class="btn btn-default target" id="target1">Join me!!!</button>
-   </div>
-  <script>
-  $(document).ready(function() {
-    
-    $("#target1").html('<span style="color: #5E00A3;">Join me!!!</span>')
-    $("#target1").addClass("animated shake");
-    $("#target1").prop("disabled", true);
+<body>
 
+<button>~Click~</button>
+<p>Hello(⁰▿⁰)</p>
+</body>
+  <script>
+$(document).ready(function(){
+  $("button").click(function(){
+    $("p").toggle();
   });
+});
 </script>
 <br>
 <center>
