--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
 <body>
 
 <button>~Click~</button>
-<p>Hello(⁰▿⁰)</p>
+
 </body>
   <script>
 $(document).ready(function(){
-  $("button").click(function(){
-    $("p").toggle();
+  $("button").addClass("animated bounce");
   });
 });
 </script>
