--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
 <body>
 
 <button>~Click~</button>
+<p>Hello(๑´ڡ`๑)</p>
+
 
 </body>
   <script>
 $(document).ready(function(){
-  $("button").addClass("animated bounce");
+  $("button").click(function(){
+    $("p").hide(1000);
   });
 });
 </script>
